--- a/Databas/views/index.ejs
+++ b/Databas/views/index.ejs
@@ -5,17 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+
+
+    <form action="/" method="post">
+        <input type="text" name="content" placeholder="New Todo">
+        <button>Add Todo</button>
+    </form>
+
     <% tabs.forEach(tab => { %>
-        <h1> <%= tab.name %> </h1>
+        <div class="tab container" id="<%= tab.name %>">
+            <h1><%=tab.name%></h1>
 
 
-        <% tab.todos.forEach(todo => { %>
-            <p><%= todo.content  %> </p>
-        <% }) %>
+            <% tab.todos.forEach(todo => { %>
+                
+                <div class="todo draggable" draggable="true">
+                    <h1 class="ids"><%=todo.id%></h1>
+
+
+                    <p><%= todo.content  %></p>
+
+
+                    <form action="/<%= todo.id %> " method="get">
+                        <button>Delete</button>
+                    </form>
+
+
+                </div>
+
+
+
+
+            <% }) %>
+
+
+        </div>
+
+
+        
     <% }) %> 
     
+    <script src="app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js" integrity="sha512-odNmoc1XJy5x1TMVMdC7EMs3IVdItLPlCeL5vSUPN2llYKMJ2eByTTAIiiuqLg+GdNr9hF6z81p27DArRFKT7A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
